<resources>
    <string name="Download_new_Game">Download new Game!</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">ACCEPT</string>
    <string name="ad_appodeal_app_key">6a8b77d09c4a9c8aee986ad523ce6bbc35c6edf910be7c35</string>
    <string name="ad_attribution">Ad</string>
    <string name="ad_banner_admob_1_id">ca-app-pub-1547661168666425/5922724415</string>
    <string name="ad_banner_admob_1_id_old">ca-app-pub-1547661168666425/7178503990</string>
    <string name="ad_banner_admob_2_id">ca-app-pub-1547661168666425/1012268388</string>
    <string name="ad_banner_admob_3_id">ca-app-pub-1547661168666425/7009110143</string>
    <string name="ad_banner_admob_auto_refresh_id">ca-app-pub-1547661168666425/4316407660</string>
    <string name="ad_banner_fan_1_id">664622156909078_1567543496616935</string>
    <string name="ad_banner_fan_2_id">664622156909078_1567544816616803</string>
    <string name="ad_banner_fan_3_id">664622156909078_1567545113283440</string>
    <string name="ad_banner_fan_4_id">664622156909078_2119572144747398</string>
    <string name="ad_chartboost_app_id">FAKE_ID</string>
    <string name="ad_chartboost_app_signature">FAKE_SIGNATURE</string>
    <string name="ad_facebook_ad_banner_id">664622156909078_905953349442623</string>
    <string name="ad_facebook_ad_interstitial_id">664622156909078_905953349442623</string>
    <string name="ad_heyzap_publisher_id">FAKE_ID</string>
    <string name="ad_interstitial_admob_1_id">ca-app-pub-1547661168666425/7568975514</string>
    <string name="ad_interstitial_admob_2_id">ca-app-pub-1547661168666425/4978115972</string>
    <string name="ad_interstitial_admob_3_id">ca-app-pub-1547661168666425/8610239226</string>
    <string name="ad_interstitial_fan_1_id">664622156909078_906358982735393</string>
    <string name="ad_interstitial_fan_2_id">664622156909078_905953349442623</string>
    <string name="ad_interstitial_fan_3_id">664622156909078_1002363316468292</string>
    <string name="ad_nativeads_admob_1_id">ca-app-pub-1547661168666425/6950946967</string>
    <string name="ad_ogury_presage_key">FAKE_ID</string>
    <string name="ad_pollfish_api_key_id">FAKE_ID</string>
    <string name="ad_rewardedvideo_admob_1_id">ca-app-pub-1547661168666425/1675533279</string>
    <string name="ad_rewardedvideo_fan_1_id">FAKE_ID</string>
    <string name="ad_unityads_game_id">1587355</string>
    <string name="ad_video_vungle_id">FAKE_AD_ID</string>
    <string name="admob_app_id">ca-app-pub-1547661168666425~4921888395</string>
    <string name="admob_publish_id">pub-1547661168666425</string>
    <string name="after_watching_ad_for_undo">Thank you for watching a video AD. Now you have 3 extra undos for 2 hours.</string>
    <string name="alert_null_intent_plus_one">"There's something wrong... Please make sure you can connect to internet and try again later."</string>
    <string name="android_api_low_not_match_facebook">Sorry, the version of you android system is new enough to use this facebook function.</string>
    <string name="app_icon_url">http://lh4.googleusercontent.com/-PB5dFM9pVNM/UzTcTvLhyhI/AAAAAAAACQ4/sXB-tt1Rs5k/s144/2-256.png</string>
    <string name="app_id">32696364044</string>
    <string name="app_id_d">595105626027</string>
    <string name="app_in_share_fb">https://fb.me/1079966568707966</string>
    <string name="app_in_store_url">https://goo.gl/Apm8fq</string>
    <string name="app_in_store_url_amazon">http://fes-games.com/appu/2048_1</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="app_name">2048</string>
    <string name="app_name_2048_4">2048 Puzzle Game</string>
    <string name="app_name_alias">2048_1</string>
    <string name="app_share_icon_url">http://lh4.googleusercontent.com/-PB5dFM9pVNM/UzTcTvLhyhI/AAAAAAAACQ4/sXB-tt1Rs5k/s144/2-256.png</string>
    <string name="app_share_string">Try to play this game!</string>
    <string name="app_title">2048</string>
    <string name="app_title_agg">2048 Game</string>
    <string name="ask_reset_the_game">Are you sure to reset the game?</string>
    <string name="ask_resolve_logo_content">Do you want to use %1$s hints to resolve this logo?</string>
    <string name="award_undos">Reward undos</string>
    <string name="backup">Backup</string>
    <string name="backup_desc_hint">Description (optional)</string>
    <string name="backup_game_data">Backup Game Data</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="big">Big</string>
    <string name="bigger">Bigger</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_handle_action">"Error. There's no application which can handle this action."</string>
    <string name="cannot_open_web_url">"Error. There's no application which can open this web page, maybe you need to install a browser app."</string>
    <string name="change_device_for_strange_error">"The app can not be opened because of a strange error.
1. You can reboot the device and reopen the app.
2. If the issue still exists, you may need to uninstall this app and then reinstall it to fix the problem.
3. After that if the issue still exists, you need to change another device to play this game."</string>
    <string name="choose_bk_to_restore">Choose a backup to restore</string>
    <string name="classic">Classic</string>
    <string name="close">Close</string>
    <string name="coins">coins</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="consent">Consent</string>
    <string name="consent_content">"We have updated our Privacy Policy.
Please read the document to understand the changes.
By choosing Accept, you agree with the Privacy Policy."</string>
    <string name="default_web_client_id">32696364044-856j6ghkpct5io7h18t5oo6rkaop2th3.apps.googleusercontent.com</string>
    <string name="download">Download</string>
    <string name="download_it_to_get">Download it to get</string>
    <string name="download_new_game">Download new Game</string>
    <string name="download_our_new_game">"
    &lt;b>&lt;font color=\"#000000\">Download our NEW GAME!&lt;/font>&lt;/b>"</string>
    <string name="download_our_new_game_html">Download our NEW GAME!</string>
    <string name="endless">Endless Mode</string>
    <string name="error_colon">Error:</string>
    <string name="exit">Exit</string>
    <string name="exit_game">Exit game</string>
    <string name="extend_extra_undo_time">"

Watching a video AD will extend the remaining time of 3 extra undos for another 2 hours. Do you want to watch a video AD now?"</string>
    <string name="extend_extra_undo_time_title">Extend time for 3 extra undos</string>
    <string name="fa_caret_left"></string>
    <string name="fa_caret_right"></string>
    <string name="fa_cloud_download_noword"></string>
    <string name="fa_cog"></string>
    <string name="fa_leaderboard"> Leaderboard</string>
    <string name="fa_question_circle"></string>
    <string name="fa_start_game"> Start Game</string>
    <string name="fa_trash_noword"></string>
    <string name="flag_scale">1</string>
</resources>