<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/menu_top_small_btn_text_size" android:textColor="@color/btn_fa_menu_1" android:id="@id/menu_btn_settings" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="@dimen/menu_top_small_btn_size" android:layout_height="@dimen/menu_top_small_btn_size" android:layout_marginTop="@dimen/menu_top_small_btn_margin_top" android:layout_marginRight="@dimen/menu_top_small_btn_margin_right" android:text="@string/fa_cog" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:onClick="onClickSettings" />
    <Button android:textSize="@dimen/menu_top_small_btn_text_size" android:textColor="@color/btn_fa_menu_1" android:id="@id/menu_btn_help" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="@dimen/menu_top_small_btn_size" android:layout_height="@dimen/menu_top_small_btn_size" android:layout_marginTop="@dimen/menu_top_small_btn_margin_top" android:layout_marginRight="@dimen/menu_top_small_btn_margin_right" android:text="@string/fa_question_circle" android:layout_toLeftOf="@id/menu_btn_settings" android:layout_alignParentTop="true" android:onClick="onClickHelp" />
    <RelativeLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/menu_flipper" android:tag="@string/flag_scale" android:layout_width="fill_parent" android:layout_height="@dimen/game_mode_flipper_height" android:layout_marginTop="110.0px" android:layout_centerHorizontal="true">
        <ViewFlipper android:id="@id/viewflipper_game_mode" android:tag="@string/flag_scale" android:layout_width="@dimen/game_mode_flipper_width" android:layout_height="@dimen/game_mode_flipper_height" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="horizontal" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/gm_flipper_text_magin_top" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
            <RelativeLayout android:id="@id/gm_btn_container_left" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:clickable="true" android:layout_width="@dimen/gm_navigate_btn_container_width" android:layout_height="@dimen/game_mode_flipper_text_height" android:layout_marginRight="10.0px" android:onClick="onClickGoLeft">
                <Button android:textSize="@dimen/menu_btn_switch_mode_text_size" android:textColor="@color/btn_fa_menu_1" android:id="@id/menu_grid_type_left" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="@dimen/gm_navigate_btn_width_new" android:layout_height="@dimen/gm_navigate_btn_height_new" android:text="@string/fa_caret_left" android:layout_centerInParent="true" android:onClick="onClickGoLeft" />
            </RelativeLayout>
            <TextView android:textSize="@dimen/game_mode_flipper_text_size" android:gravity="center" android:tag="@string/flag_scale" android:visibility="invisible" android:layout_width="@dimen/game_mode_flipper_text_width" android:layout_height="@dimen/game_mode_flipper_text_height" android:text="notext" android:maxLines="1" />
            <RelativeLayout android:tag="@string/flag_scale" android:background="@android:color/transparent" android:clickable="true" android:layout_width="@dimen/gm_navigate_btn_container_width" android:layout_height="@dimen/game_mode_flipper_text_height" android:layout_marginLeft="10.0px" android:onClick="onClickGoRight">
                <Button android:textSize="@dimen/menu_btn_switch_mode_text_size" android:textColor="@color/btn_fa_menu_1" android:id="@id/menu_grid_type_right" android:tag="@string/flag_scale" android:background="@android:color/transparent" android:layout_width="@dimen/gm_navigate_btn_width_new" android:layout_height="@dimen/gm_navigate_btn_height_new" android:text="@string/fa_caret_right" android:layout_centerInParent="true" android:onClick="onClickGoRight" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center|top" android:orientation="vertical" android:tag="@string/flag_scale" android:layout_width="wrap_content" android:layout_height="160.0px" android:layout_marginTop="20.0px" android:layout_below="@id/menu_flipper" android:layout_centerHorizontal="true">
        <Button android:textSize="28.0px" android:textStyle="bold" android:textColor="@color/background" android:id="@id/menu_btn_start" android:tag="@string/flag_scale" android:background="@drawable/menu_button_2" android:layout_width="300.0px" android:layout_height="60.0px" android:text="@string/fa_start_game" android:onClick="onClickStartGame" android:textAllCaps="false" />
        <Button android:textSize="28.0px" android:textStyle="bold" android:textColor="@color/background" android:id="@id/menu_btn_leaderboard" android:tag="@string/flag_scale" android:background="@drawable/menu_button" android:layout_width="300.0px" android:layout_height="60.0px" android:layout_marginTop="30.0px" android:text="@string/fa_leaderboard" android:onClick="onClickLeaderboard" android:textAllCaps="false" />
    </LinearLayout>
    <include android:id="@id/todays_offer" layout="@layout/todays_offer" />
</RelativeLayout>